<resources>
    <string name="app_name">s354378-mappe2</string>

    <string name="title">Legg til kontakt</string>
    <string name="titleAppointment">Opprett avtale</string>
    <string name="titleHome">Velkommen</string>
    <string name="titleDisplayContacts">Dine kontakter</string>
    <string name="titleEditContact">Endre kontakt</string>
    <string name="titleDisplayAppointments">Dine avtaler</string>


    <string name="btnShowContacts">Vis kontakter</string>
    <string name="btnShowAppointments">Vis avtaler</string>
    <string name="btnCreateContact">Legg til kontakt</string>
    <string name="btnCreateAppointment">Lag avtale</string>
    <string name="btnOverview">Se oversikt</string>
    <string name="btnToggleSMS">Skru SMS av</string>
    <string name="btnToggleService">Skru av notifikasjoner</string>

    <string name="inputFirst">Fornavn</string>
    <string name="inputLast">Etternavn</string>

    <string name="labelFirst">Fornavn</string>
    <string name="labelLast">Etternavn</string>
    <string name="labelPhone">Telefonnummer</string>
    <string name="appointmentLabel">Avtaler</string>
    <string name="contactLabel">Kontakter</string>

    <string name="labelName">Tittel</string>
    <string name="datePicker">JAN 01 2020</string>
    <string name="labelTime">Tid</string>
    <string name="labelLocation">Sted</string>
    <string name="labelParticipant">Venn</string>
    <string name="labelMessage">Melding</string>

    <string name="channel_name">Min Kanal15</string>
    <string name="channel_description">Min Beskrivelse15</string>
</resources>