<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:text="@string/titleHome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <LinearLayout
        android:layout_width="252dp"
        android:layout_height="151dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/contactLabel"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/appointmentLabel"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateContact"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="2.5dp"
                android:background="@drawable/button_border"
                android:text="@string/btnCreateContact"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateAppointment"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="2.5dp"
                android:background="@drawable/button_border"
                android:text="@string/btnCreateAppointment"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShowContactsPage"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="2.5dp"
                android:background="@drawable/button_border"
                android:text="@string/btnShowContacts"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShowAppointmentsPage"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="2.5dp"
                android:background="@drawable/button_border"
                android:text="@string/btnShowAppointments"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/toggleSMS"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="2.5dp"
        android:background="@drawable/button_border"
        android:text="@string/btnToggleSMS"
        android:textColor="#FFFFFF"
        android:onClick="toggleSMS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/toggleService"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="2.5dp"
        android:background="@drawable/button_border"
        android:text="@string/btnToggleService"
        android:textColor="#FFFFFF"
        android:onClick="stoppPeriodisk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />


</androidx.constraintlayout.widget.ConstraintLayout>